# Collateral-Vault-Management

./: .dockerignore  .env.example  .gitignore  DOCKER.md  LICENSE  Makefile  README.md  docker-compose.yml  setup-solana-dev.sh
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-7e942fc0a4855456c6f1bf15b05d8673ffb3b2be16bedac81d590da0308560c6.json  query-d5c657f22110d566aab28c6b149a944542ee3b2e953d208bc1a304314f0bde38.json
backend/migrations/: 001_initial_schema.sql  002_tvl_snapshots.sql  003_mfa_support.sql  004_allow_multiple_snapshots_per_day.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: analytics.rs  health.rs  mfa.rs  mod.rs  vault.rs  yield.rs
backend/src/db/: mfa.rs  mod.rs  models.rs  snapshot.rs
backend/src/middleware/: rate_limit.rs
backend/src/solana/: mod.rs
backend/src/vault/: manager.rs  mod.rs
backend/src/ws/: handler.rs
backend/tests/: integration_test.rs
docs/: API.md  DATABASE_SCHEMA.md
frontend/: Dockerfile  index.html  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Button.tsx  Card.tsx  Header.tsx  Input.tsx  Layout.tsx  MfaSetup.tsx  Navigation.tsx  TvlChart.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Transactions.tsx  Vault.tsx  Yield.tsx
frontend/src/styles/: wallet-adapter.css
frontend/src/tests/components/: Button.test.tsx  Card.test.tsx  Input.test.tsx
frontend/src/tests/pages/: Dashboard.test.tsx
frontend/src/tests/utils/: format.test.ts
frontend/src/utils/: format.ts
program/: .mocharc.json  Anchor.toml  Cargo.toml  package.json  tsconfig.json
program/programs/collateral_vault/: Cargo.toml
program/programs/collateral_vault/src/: errors.rs  lib.rs
program/programs/collateral_vault/src/instructions/: advanced_config.rs  authority.rs  batch_operations.rs  deposit.rs  execute_withdrawal.rs  initialize_vault.rs  lock_collateral.rs  mod.rs  request_withdrawal.rs  transfer_collateral.rs  unlock_collateral.rs  withdraw.rs  yield_compound.rs
program/programs/collateral_vault/src/state/: authority.rs  mod.rs  vault.rs
program/test-reports/: test_report_20260112_171455.md
program/tests/: Cargo.toml  collateral-vault.ts  collateral_vault_test.rs  lib.rs  utils.rs
test-results/: 001-test-coverage-report.md  002-security-test-results.md  003-performance-metrics.md  004-cpi-test-logs.md
