[package]
name = "vault-backend"
version = "0.1.0"
edition = "2021"
default-run = "vault-backend"

[lints.rust]
unexpected_cfgs = "allow"

[workspace.lints.rust]
unexpected_cfgs = "allow"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
bincode = "1.3"

# Solana
anchor-client = "0.32.1"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-client = "2.2.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-stream = "0.1"
futures = "0.3"

# Async
async-trait = "0.1"

# MFA / TOTP
totp-rs = "5.4"
qrcode = "0.14"
rand = "0.9.2"
urlencoding = "2.1"
base32 = "0.4"

# Rate Limiting
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
dashmap = "5.5"

[dependencies.collateral_vault]
path = "../program/programs/collateral_vault"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"
tempfile = "3.8"
once_cell = "1.19"

[profile.test]
opt-level = 0

[profile.bench]
opt-level = 3

