[package]
name = "collateral_vault_tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[test]]
name = "collateral_vault_test"
path = "collateral_vault_test.rs"
harness = true

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-program-test = "~2.0"
solana-sdk = "~2.0"
tokio = { version = "1", features = ["full"] }
spl-token = "~4.0"
anchor-client = "0.32.1"

[dev-dependencies]
anyhow = "1.0"

