[package]
name = "collateral_vault"
version = "0.1.0"
description = "Collateral Vault Management for Perpetual Futures DEX"
edition = "2021"

[lints.rust]
unexpected_cfgs = "allow"

[lib]
crate-type = ["cdylib", "lib"]
name = "collateral_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl =  { version = "0.32.1", features = ["token"] }

[patch.crates-io]
solana-instruction = "=2.2.1"
zeroize = "=1.7.0"
